--- a/index.html
+++ b/index.html
@@ -24,20 +24,34 @@
 	</div>
 
 	<div class="section" id="aboutme">
-		<img id="logo" src="assets/images/logo.png">
-		<div id="about"><font size="6">ABOUT ME:</font> <p>I am a 10-year-old yellow Labrador Retriever/Siberian Husky/German Shepherd/Mystery mix. My human, Julie, adopted me when I was 6 months old! I was named Icy because when I was a puppy my fur was pure white, but since then I have yellowed and mellowed with age. I love long walks on the beach, even though I get in trouble for chasing seagulls. I'm very protective, but kind of on the lazy side. And the chubby side. But that just makes me more loveable!</p></div>
-		<div id="foods">My favorite thing to eat is everything. Especially these things!
-			<img class="food" src="assets/images/pb.png">
-			<img class="food" src="assets/images/meat.png">
+		<div id="about">
+			<img id="logo" src="assets/images/logo.png">
+			<div id="text"><font size="6">ABOUT ME:</font> <p>I am a 10-year-old yellow Labrador Retriever/Siberian Husky/German Shepherd/Mystery mix. My human, Julie, adopted me when I was 6 months old! I was named Icy because when I was a puppy my fur was pure white, but since then I have yellowed and mellowed with age. I love long walks on the beach, even though I get in trouble for chasing seagulls. I'm very protective, but kind of on the lazy side. And the chubby side. But that just makes me more loveable!</p></div>
+		</div>
+		<div id="hobbies">
+			<div id="hobbytext"><font size="6">HOBBIES:</font><p>When I'm not sleeping I like eating, and when I'm not eating I like playing fetch.</p></div>
+			<img class="hobby" src="assets/images/sleeping.png">
+			<img class="hobby" src="assets/images/eating.png">
+			<img class="hobby" src="assets/images/fetch.png">
+		</div>
+		<div id="foods">
+			<font size="6">NOMS:</font><p>My favorite thing to eat is everything. Especially these things!</p>
 			<img class="food" src="assets/images/watermelon.png">
+			<img class="food" src="assets/images/meat.png">
 			<img class="food" src="assets/images/carrot.png">
 			<img class="food" src="assets/images/bones.png">
+			<img class="food" src="assets/images/pb.png">
 		</div>
-		<div id="friends">I love my friends and they love me. 
+		<div id="friends">
+			<font size="6">PALS:</font><p>I love my furriends and they love me.</p>
+			<img class="friend" src="assets/images/mickey.png">
+			<img class="friend" src="assets/images/sam.png">
+			<img class="friend" src="assets/images/kimchi.png">
 		</div>
 	</div>
 
-	<div class="section" id="photopage"> This is what I look like!
+	<div class="section" id="photopage">
+		<div id="phototext">This is what I look like!</div>
 		<img class="picture" src="assets/images/icy1.jpg">
 		<img class="picture" src="assets/images/icy2.jpg">
 		<img class="picture" src="assets/images/icy3.jpg">
@@ -53,8 +67,16 @@
 	</div>
 
 	<div class="section" id="contact">
-		<div id="icycontact"> Please send me treats!</div>
-		<div id="juliecontact"> Please send your words to my human. I can't read.</div>
+		<div id="icycontact"> Please send me treats!
+			<img class="contact" src="assets/images/contacticy.png"> 
+			<img class="social" src="assets/images/contactbone.png">
+		</div>
+		<div id="juliecontact"> Please send your words to my human. I can't read.
+			<img class="contact" src="assets/images/contactjulie.png"> 
+			<img class="social" src="assets/images/contactfb.png">
+			<img class="social" src="assets/images/contactemail.png">
+			<img class="social" src="assets/images/contacttumblr.png">
+		</div>
 	</div>
 
 
