--- a/index.html
+++ b/index.html
@@ -49,33 +49,38 @@
 			<img class="friend" src="assets/images/kimchi.png">
 		</div>
 	</div>
-
+<div id="lightbox">
 	<div class="section" id="photopage">
 		<div id="phototext">This is what I look like!</div>
-		<img class="picture" src="assets/images/icy1.jpg">
-		<img class="picture" src="assets/images/icy2.jpg">
-		<img class="picture" src="assets/images/icy3.jpg">
-		<img class="picture" src="assets/images/icy4.jpg">
-		<img class="picture" src="assets/images/icy5.jpg">
-		<img class="picture" src="assets/images/icy6.jpg">
-		<img class="picture" src="assets/images/icy7.jpg">
-		<img class="picture" src="assets/images/icy8.jpg">
-		<img class="picture" src="assets/images/icy9.jpg">
-		<img class="picture" src="assets/images/icy10.jpg">
-		<img class="picture" src="assets/images/icy11.jpg">
-		<img class="picture" src="assets/images/icy12.jpg">
+		<div class="picture"> <img class="img" src="assets/images/icy1.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy2.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy3.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy4.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy5.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy6.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy7.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy8.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy9.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy10.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy11.jpg"></div>
+		<div class="picture"> <img class="img" src="assets/images/icy12.jpg"></div>
 	</div>
-
-	<div class="section" id="contact">
-		<div id="icycontact"> Please send me treats!
-			<img class="contact" src="assets/images/contacticy.png"> 
+</div>
+	<div class="section" id="contactpage">
+		<div id="contacttext"> BARK @ ME </div>
+		<div class="contact"> 
+		<img class="circle" src="assets/images/logo2.png"> 
+			<div class="sendtext"> Please send me treats! </div>
+			<img class="home" src="assets/images/contacticy.png"> 
 			<img class="social" src="assets/images/contactbone.png">
 		</div>
-		<div id="juliecontact"> Please send your words to my human. I can't read.
-			<img class="contact" src="assets/images/contactjulie.png"> 
-			<img class="social" src="assets/images/contactfb.png">
-			<img class="social" src="assets/images/contactemail.png">
-			<img class="social" src="assets/images/contacttumblr.png">
+		<div class="contact"> 
+		<img class="circle" src="assets/images/julie.png"> 
+			<div class="sendtext"> Please send your words to my human here (I can't read). </div>
+			<a href="http://juliejraws.tumblr.com"><img class="home" src="assets/images/contactjulie.png"></a> 
+			<a href="http://facebook.com/julie.ting.liu"><img class="social" src="assets/images/contactfb.png"></a>
+			<a href="mailto:jttliu@gmail.com?subject=Hello!"><img class="social" src="assets/images/contactemail.png"></a>
+			<a href="http://jayragon.tumblr.com"><img class="social" src="assets/images/contacttumblr.png"></a>
 		</div>
 	</div>
 
