--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 	<div id="navbar"> 
-			<div class="navbar-item"> Home </div>
-	        <div class="navbar-item"> About Me </div>
-	        <div class="navbar-item"> Photos </div>
-	        <div class="navbar-item"> Contact </div>
+			<div class="navbar-item"> <a href="#home" style="color: white">Home</a></div>
+	        <div class="navbar-item"> <a href="#about" style="color: white">About Me </div>
+	        <div class="navbar-item"> <a href="#photos" style="color: white">Photos </div>
+	        <div class="navbar-item"> <a href="#contact" style="color: white">Contact </div>
 		</div>
+<a name="home">
 	<div class="section" id="homepage">
 		<img id="icy" src="assets/images/icy.png">
 		<div id="greeting">
@@ -22,7 +23,7 @@
 		(Translation: Hi! My name is Icy.)</div>
 		</div>
 	</div>
-
+<a name="about">
 	<div class="section" id="aboutme">
 		<div id="about">
 			<img id="logo" src="assets/images/logo.png">
@@ -49,6 +50,7 @@
 			<img class="friend" src="assets/images/kimchi.png">
 		</div>
 	</div>
+<a name="photos">
 <div id="lightbox">
 	<div class="section" id="photopage">
 		<div id="phototext">This is what I look like!</div>
@@ -66,6 +68,7 @@
 		<div class="picture"> <img class="img" src="assets/images/icy12.jpg"></div>
 	</div>
 </div>
+<a name="contact">
 	<div class="section" id="contactpage">
 		<div id="contacttext"> BARK @ ME </div>
 		<div class="contact"> 
