--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Icy Liu</title>
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Rubik" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="assets/style.css">
-<script src="assets/jquery-1.9.1.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="assets/script.js"></script>
 </head>
 <body>
@@ -27,7 +27,7 @@
 	<div class="section" id="aboutme">
 		<div id="about">
 			<img id="logo" src="assets/images/logo.png">
-			<div id="text"><font size="6">ABOUT ME:</font> <p>I am a 10-year-old yellow Labrador Retriever/Siberian Husky/German Shepherd/Mystery mix. My human, Julie, adopted me when I was 6 months old! I was named Icy because when I was a puppy my fur was pure white, but since then I have yellowed and mellowed with age. I love long walks on the beach, even though I get in trouble for chasing seagulls. I'm very protective, but kind of on the lazy side. And the chubby side. But that just makes me more loveable!</p></div>
+			<div id="text"><font size="6">ABOUT ME:</font> <p>I am a 10-year-old yellow Labrador Retriever/Siberian Husky/German Shepherd/Mystery mix. My human, Julie, adopted me when I was 6 months old!</p> <p> I was named Icy because when I was a puppy my fur was pure white, but since then I have yellowed and mellowed with age. I love long walks on the beach, even though I get in trouble for chasing seagulls. I'm very protective, but kind of on the lazy side. And the chubby side. But that just makes me more loveable!</p></div>
 		</div>
 		<div id="hobbies">
 			<div id="hobbytext"><font size="6">HOBBIES:</font><p>When I'm not sleeping I like eating, and when I'm not eating I like playing fetch.</p></div>
