--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<style> html, body, a, a:hover { cursor:url('http://www.snazzyspace.com/cursorsfolder/dog-paw.png'), auto !important; }</style>
 <head>
 	<title>Icy Liu</title>
 <link href="https://fonts.googleapis.com/css?family=Montserrat|Rubik" rel="stylesheet">
@@ -51,7 +52,6 @@
 		</div>
 	</div>
 <a name="photos">
-<div id="lightbox">
 	<div class="section" id="photopage">
 		<div id="phototext">This is what I look like!</div>
 		<div class="picture"> <img class="img" src="assets/images/icy1.jpg"></div>
@@ -67,15 +67,14 @@
 		<div class="picture"> <img class="img" src="assets/images/icy11.jpg"></div>
 		<div class="picture"> <img class="img" src="assets/images/icy12.jpg"></div>
 	</div>
-</div>
 <a name="contact">
 	<div class="section" id="contactpage">
-		<div id="contacttext"> BARK @ ME </div>
+		<div id="contacttext"> BARK @ ME! </div>
 		<div class="contact"> 
 		<img class="circle" src="assets/images/logo2.png"> 
 			<div class="sendtext"> Please send me treats! </div>
 			<img class="home" src="assets/images/contacticy.png"> 
-			<img class="social" src="assets/images/contactbone.png">
+			<img id="bone" src="assets/images/contactbone.png">
 		</div>
 		<div class="contact"> 
 		<img class="circle" src="assets/images/julie.png"> 
@@ -86,7 +85,5 @@
 			<a href="http://jayragon.tumblr.com"><img class="social" src="assets/images/contacttumblr.png"></a>
 		</div>
 	</div>
-
-
 </body>
 </html>
