--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<img class="hobby" src="assets/images/fetch.png">
 		</div>
 		<div id="foods">
-			<font size="6">NOMS:</font><p>My favorite thing to eat is everything. Especially these things!</p>
+			<div id="foodtext"><font size="6">NOMS:</font><p>My favorite thing to eat is everything. Especially these things!</p></div>
 			<img class="food" src="assets/images/watermelon.png">
 			<img class="food" src="assets/images/meat.png">
 			<img class="food" src="assets/images/carrot.png">
@@ -45,7 +45,7 @@
 			<img class="food" src="assets/images/pb.png">
 		</div>
 		<div id="friends">
-			<font size="6">PALS:</font><p>I love my furriends and they love me.</p>
+			<div id="friendtext"><font size="6">PALS:</font><p>I love my furriends and they love me.</p></div>
 			<img class="friend" src="assets/images/mickey.png">
 			<img class="friend" src="assets/images/sam.png">
 			<img class="friend" src="assets/images/kimchi.png">
