--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<div id="contacttext"> BARK @ ME! </div>
 		<div class="contact"> 
 		<img class="circle" src="assets/images/logo2.png"> 
-			<div class="sendtext"> Please send me treats! </div>
+			<div class="sendtext"> Please send me treats (Click the bone to feed me)!</div>
 			<img class="home" src="assets/images/contacticy.png"> 
 			<img id="bone" src="assets/images/contactbone.png">
 		</div>
