edited white space on nabber

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 	<div id="navbar"> 
 			<div class="navbar-item"> <a href="#home" style="color: white">Home</a></div>
-	        <div class="navbar-item"> <a href="#about" style="color: white">About Me </div>
-	        <div class="navbar-item"> <a href="#photos" style="color: white">Photos </div>
-	        <div class="navbar-item"> <a href="#contact" style="color: white">Contact </div>
+	        <div class="navbar-item"> <a href="#about" style="color: white">About Me</a></div>
+	        <div class="navbar-item"> <a href="#photos" style="color: white">Photos</a></div>
+	        <div class="navbar-item"> <a href="#contact" style="color: white">Contact</a></div>
 		</div>
 <a name="home">
 	<div class="section" id="homepage">
